--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-flask==2.3.2
-flask-sqlalchemy==3.0.3
-flask-login==0.6.2
-flask-migrate==4.0.4
-flask-admin==1.6.1
-python-dotenv==1.0.0
+alembic==1.16.1
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
 email-validator==2.0.0.post2
+Flask==2.3.2
+Flask-Admin==1.6.1
+Flask-Login==0.6.3
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.3
+greenlet==3.2.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+python-dotenv==1.0.0
+SQLAlchemy==2.0.41
+typing_extensions==4.13.2
+Werkzeug==3.1.3
+WTForms==3.2.1
